--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "sterling-svelte",
-	"version": "0.0.1",
+	"name": "@geoffcox/sterling-svelte",
+	"version": "0.0.3",
 	"scripts": {
 		"dev": "vite dev",
-		"build:demo": "vite build",
+		"build:docs": "vite build",
 		"build:lib": "svelte-kit sync && svelte-package",
 		"prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
 		"test": "playwright test",
@@ -36,5 +36,9 @@
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@floating-ui/dom": "^1.1.0",
+		"uuid": "^9.0.0"
+	}
 }
