--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@geoffcox/sterling-svelte",
-	"version": "0.0.7",
+	"version": "0.0.8",
 	"scripts": {
 		"dev": "vite dev",
 		"build:docs": "vite build",
@@ -40,6 +40,7 @@
 	"type": "module",
 	"dependencies": {
 		"@floating-ui/dom": "^1.1.0",
+		"lodash-es": "^4.17.21",
 		"uuid": "^9.0.0"
 	}
 }
