--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geoffcox/sterling-svelte",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "scripts": {
     "dev": "vite dev",
     "build:docs": "vite build",
@@ -21,6 +21,7 @@
     "@sveltejs/adapter-static": "^1.0.0",
     "@sveltejs/kit": "^1.0.0",
     "@sveltejs/package": "^1.0.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
