--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "^1.1.0",
+    "keyborg": "^2.0.0",
     "lodash-es": "^4.17.21",
-    "svelte-portal": "^2.2.0",
     "uuid": "^9.0.0"
   }
 }
