--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   ],
   "scripts": {
     "dev": "vite dev",
-    "build:docs": "vite build",
+    "build": "vite build",
     "build:lib": "svelte-kit sync && svelte-package",
     "prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
+    "preview": "vite preview",
     "test": "playwright test",
+    "test:update": "playwright test -u",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test:unit": "vitest",
@@ -33,9 +35,9 @@
     "@fontsource/fira-mono": "^4.5.10",
     "@fontsource/overpass": "^4.5.10",
     "@playwright/test": "^1.28.1",
-    "@sveltejs/adapter-auto": "^1.0.0",
+    "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^1.0.0",
-    "@sveltejs/kit": "^1.0.0",
+    "@sveltejs/kit": "^1.5.0",
     "@sveltejs/package": "^1.0.0",
     "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^9.0.0",
@@ -48,10 +50,10 @@
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
     "svelte": "^3.54.0",
-    "svelte-check": "^2.9.2",
+    "svelte-check": "^3.0.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0",
+    "vite": "^4.2.0",
     "vitest": "^0.25.3"
   },
   "type": "module",
