--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@sveltejs/kit": "^1.5.0",
     "@sveltejs/package": "^1.0.0",
     "@types/lodash-es": "^4.17.6",
-    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
@@ -60,7 +59,6 @@
   "dependencies": {
     "@floating-ui/dom": "^1.1.0",
     "keyborg": "^2.0.0",
-    "lodash-es": "^4.17.21",
-    "uuid": "^9.0.0"
+    "lodash-es": "^4.17.21"
   }
 }
