--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geoffcox/sterling-svelte",
-  "version": "0.0.29",
+  "version": "0.0.30",
   "author": "Geoff Cox",
   "description": "A modern, accessible, and lightweight component library for Svelte.",
   "license": "MIT",
@@ -18,18 +18,18 @@
     "javascript"
   ],
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "build:lib": "svelte-kit sync && svelte-package",
-    "prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
-    "preview": "vite preview",
-    "test": "playwright test",
-    "test:update": "playwright test -u",
+    "build": "vite build && npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test:unit": "vitest",
+    "dev": "vite dev",
+    "format": "prettier --plugin-search-dir . --write .",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "package": "svelte-kit sync && svelte-package && publint",
+    "prepublishOnly": "npm run package",
+    "preview": "vite preview",
+    "test": "playwright test",
+    "test:unit": "vitest",
+    "test:update": "playwright test -u"
   },
   "devDependencies": {
     "@fontsource/open-sans": "^4.5.14",
@@ -37,7 +37,7 @@
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^1.0.0",
-    "@sveltejs/kit": "^1.5.0",
+    "@sveltejs/kit": "^1.20.4",
     "@sveltejs/package": "^1.0.0",
     "@types/lodash-es": "^4.17.6",
     "@types/tinycolor2": "^1.4.3",
@@ -48,11 +48,11 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "mdsvex": "^0.10.6",
     "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
+    "prettier-plugin-svelte": "^2.10.1",
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
+    "typescript": "^5.0.0",
     "vite": "^4.2.0",
     "vitest": "^0.25.3"
   },
@@ -62,5 +62,8 @@
     "@floating-ui/dom": "^1.1.0",
     "keyborg": "^2.0.0",
     "lodash-es": "^4.17.21"
+  },
+  "peerDependencies": {
+    "svelte": "^4.0.0"
   }
 }
