Removed old theming

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geoffcox/sterling-svelte",
-  "version": "0.0.31",
+  "version": "1.0.0",
   "author": "Geoff Cox",
   "description": "A modern, accessible, and lightweight component library for Svelte.",
   "license": "MIT",
@@ -19,12 +19,25 @@
     "typescript",
     "javascript",
     "button",
+    "callout",
     "checkbox",
+    "colorpicker",
+    "dialog",
+    "dropdown",
+    "input",
+    "label",
+    "link",
     "list",
     "menu",
+    "popover",
+    "progress",
     "radio",
     "select",
+    "slider",
+    "switch",
+    "tabs",
     "textarea",
+    "tooltip",
     "tree"
   ],
   "scripts": {
