--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "dev": "vite dev",
     "format": "prettier --plugin-search-dir . --write .",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "package": "svelte-kit sync && svelte-package && publint",
+    "package": "svelte-kit sync && svelte-package",
     "prepublishOnly": "npm run package",
     "preview": "vite preview",
     "test": "playwright test",
