--- a/package.json
+++ b/package.json
@@ -40,53 +40,68 @@
     "tooltip",
     "tree"
   ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "svelte": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
   "scripts": {
     "build": "vite build && npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "dev": "vite dev",
-    "format": "prettier --plugin-search-dir . --write .",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "package": "svelte-kit sync && svelte-package",
-    "prepublishOnly": "npm run package",
+    "format": "prettier --write .",
+    "lint": "prettier --check . && eslint .",
+    "package": "svelte-kit sync && svelte-package && publint",
     "preview": "vite preview",
-    "test": "playwright test",
-    "test:unit": "vitest",
-    "test:update": "playwright test -u"
+    "test": "npm run test:integration && npm run test:unit",
+    "test:integration": "playwright test",
+    "test:unit": "vitest"
+  },
+  "peerDependencies": {
+    "svelte": "^4.0.0"
   },
   "devDependencies": {
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/source-code-pro": "^4.5.14",
     "@playwright/test": "^1.28.1",
-    "@sveltejs/adapter-auto": "^3.2.0",
-    "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.5.10",
-    "@sveltejs/package": "^2.3.1",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-static": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/package": "^2.0.0",
     "@types/lodash-es": "^4.17.6",
     "@types/tinycolor2": "^1.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/eslint": "^8.56.7",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.36.0",
+    "globals": "^15.0.0",
     "mdsvex": "^0.11.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^4.0.0",
-    "svelte-check": "^3.4.3",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "publint": "^0.1.9",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.0",
     "svelte-preprocess": "^5.0.4",
-    "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.2.12",
-    "vitest": "^0.25.3"
+    "typescript-eslint": "^8.0.0-alpha.20",
+    "vite": "^5.0.11",
+    "vitest": "^1.2.0"
   },
-  "type": "module",
   "dependencies": {
     "@ctrl/tinycolor": "^3.6.0",
     "@floating-ui/dom": "^1.1.0",
     "keyborg": "^2.0.0",
     "lodash-es": "^4.17.21"
   },
-  "peerDependencies": {
-    "svelte": "^4.0.0"
-  }
+  "svelte": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "type": "module"
 }
