--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geoffcox/sterling-svelte",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "author": "Geoff Cox",
   "description": "A modern, accessible, and lightweight component library for Svelte.",
   "license": "MIT",
@@ -47,7 +47,7 @@
     }
   },
   "files": [
-    "dist",
+    "dist/*",
     "!dist/**/*.test.*",
     "!dist/**/*.spec.*"
   ],
@@ -71,14 +71,15 @@
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/source-code-pro": "^4.5.14",
     "@playwright/test": "^1.28.1",
+    "@stackblitz/sdk": "^1.10.0",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-static": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/package": "^2.0.0",
-    "@types/lodash-es": "^4.17.6",
-    "@types/tinycolor2": "^1.4.3",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/eslint": "^8.56.7",
+    "@types/lodash-es": "^4.17.6",
+    "@types/tinycolor2": "^1.4.3",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
