--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geoffcox/sterling-svelte",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "author": "Geoff Cox",
   "description": "A modern, accessible, and lightweight component library for Svelte.",
   "license": "MIT",
@@ -44,7 +44,9 @@
     ".": {
       "types": "./dist/index.d.ts",
       "svelte": "./dist/index.js"
-    }
+    },
+    "./css/*.css": "./dist/css/*.css",
+    "./*.svelte": "./dist/*.svelte"
   },
   "files": [
     "dist/*",
@@ -71,7 +73,6 @@
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/source-code-pro": "^4.5.14",
     "@playwright/test": "^1.28.1",
-    "@stackblitz/sdk": "^1.10.0",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-static": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
