--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "test:unit": "vitest"
   },
   "peerDependencies": {
-    "svelte": "^4.0.0"
+    "svelte": "^5.0.0-next.244"
   },
   "devDependencies": {
     "@fontsource/open-sans": "^4.5.14",
@@ -84,11 +84,10 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
-    "mdsvex": "^0.11.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.6",
     "publint": "^0.1.9",
-    "svelte": "^4.2.7",
+    "svelte": "^5.0.0-next.244",
     "svelte-check": "^3.6.0",
     "svelte-preprocess": "^5.0.4",
     "typescript": "^5.0.0",
