--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "button",
     "callout",
     "checkbox",
-    "colorpicker",
     "dialog",
     "dropdown",
     "input",
@@ -67,36 +66,34 @@
     "test:unit": "vitest"
   },
   "peerDependencies": {
-    "svelte": "^5.0.0-next.244"
+    "svelte": "^5.0.0"
   },
   "devDependencies": {
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/source-code-pro": "^4.5.14",
-    "@playwright/test": "^1.28.1",
+    "@playwright/test": "^1.45.3",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-static": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/package": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/eslint": "^8.56.7",
     "@types/lodash-es": "^4.17.6",
-    "eslint": "^9.0.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.6",
     "publint": "^0.1.9",
-    "svelte": "^5.0.0-next.244",
-    "svelte-check": "^3.6.0",
-    "svelte-preprocess": "^5.0.4",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.0",
+    "svelte-preprocess": "^6.0.3",
     "typescript": "^5.0.0",
-    "typescript-eslint": "^8.0.0-alpha.20",
-    "vite": "^5.0.11",
-    "vitest": "^1.2.0"
+    "typescript-eslint": "^8.0.0",
+    "vite": "^5.0.3",
+    "vitest": "^2.1.4"
   },
   "dependencies": {
-    "@ctrl/tinycolor": "^4.1.0",
     "@floating-ui/dom": "^1.1.0",
     "keyborg": "^2.0.0",
     "lodash-es": "^4.17.21"
