--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geoffcox/sterling-svelte",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "author": "Geoff Cox",
   "description": "A modern, accessible, and lightweight UI component library for Svelte.",
   "license": "MIT",
@@ -43,12 +43,10 @@
     ".": {
       "types": "./dist/index.d.ts",
       "svelte": "./dist/index.js"
-    },
-    "./css/*.css": "./dist/css/*.css",
-    "./*.svelte": "./dist/*.svelte"
+    }
   },
   "files": [
-    "dist/*",
+    "dist",
     "!dist/**/*.test.*",
     "!dist/**/*.spec.*"
   ],
@@ -73,10 +71,12 @@
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/source-code-pro": "^4.5.14",
     "@geoffcox/sterling-svelte-themes": "^1.0.2",
+    "@eslint/compat": "^1.2.3",
     "@playwright/test": "^1.45.3",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-static": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/eslint": "^8.56.7",
     "@types/lodash-es": "^4.17.6",
@@ -86,13 +86,13 @@
     "globals": "^15.0.0",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.6",
-    "publint": "^0.1.9",
+    "publint": "^0.2.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "svelte-preprocess": "^6.0.3",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
-    "vite": "^5.0.3",
+    "vite": "^5.4.11",
     "vitest": "^2.1.4"
   },
   "dependencies": {
