--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geoffcox/sterling-svelte",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "author": "Geoff Cox",
   "description": "A modern, accessible, and lightweight UI component library for Svelte.",
   "license": "MIT",
@@ -28,6 +28,7 @@
     "link",
     "list",
     "menu",
+    "pagination",
     "popover",
     "progress",
     "radio",
