--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@geoffcox/sterling-svelte",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "author": "Geoff Cox",
-  "description": "A modern, accessible, and lightweight UI component library for Svelte.",
+  "description": "A modern, accessible, and lightweight component library for Svelte.",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/GeoffCox/sterling-svelte/issues"
@@ -10,14 +10,15 @@
   "homepage": "https://github.com/GeoffCox/sterling-svelte/blob/main/README.md",
   "keywords": [
     "svelte",
+    "svelte5",
     "svelte 5",
-    "sveltekit",
-    "design system",
+    "typescript",
+    "javascript",
+    "UI",
+    "UX",
     "component",
     "components",
     "controls",
-    "typescript",
-    "javascript",
     "button",
     "callout",
     "checkbox",
@@ -35,7 +36,9 @@
     "select",
     "slider",
     "switch",
+    "tab",
     "tabs",
+    "tab list",
     "textarea",
     "tooltip",
     "tree"
@@ -71,7 +74,7 @@
     "@eslint/js": "^9.18.0",
     "@fontsource/atkinson-hyperlegible": "^5.1.1",
     "@fontsource/source-code-pro": "^4.5.14",
-    "@geoffcox/sterling-svelte-themes": "^1.0.5",
+    "@geoffcox/sterling-svelte-themes": "^2.0.0",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/package": "^2.0.0",
