--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geoffcox/sterling-svelte",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "author": "Geoff Cox",
   "description": "A modern, accessible, and lightweight component library for Svelte.",
   "license": "MIT",
@@ -64,8 +64,7 @@
     "lint": "prettier --check . && eslint .",
     "package": "svelte-kit sync && svelte-package && publint",
     "preview": "vite preview",
-    "test": "npm run test:integration && npm run test:unit",
-    "test:unit": "vitest"
+    "test": "npm run test:integration && npm run test:unit"
   },
   "peerDependencies": {
     "svelte": "^5.0.0"
@@ -95,8 +94,7 @@
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.20.0",
-    "vite": "^6.0.0",
-    "vitest": "^3.0.0"
+    "vite": "^6.0.0"
   },
   "dependencies": {
     "@floating-ui/dom": "^1.1.0",
